--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -9,3 +9,11 @@ ion-card-subtitle {
   border-radius: 7px;
   box-shadow: 6px 6px 19px 0px rgba(214,214,214,1);
 }
+
+ion-button {
+  color: black;
+}
+
+.textarea-wrapper {
+  border-bottom: 1px dotted #ccc;
+}
