--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -30,3 +30,37 @@ a {
 .ionicon {
   color: white;
 }
+
+/* --- firebase styles --- */
+
+.firebaseui-input, .firebaseui-input-invalid {
+  border: none;
+  margin: 10px;
+  padding: 8px;
+  font-size: 17px;
+  width: 100%;
+  background-color: white;
+}
+
+.firebaseui-textfield {
+  border-bottom: 1px solid var(--ion-color-primary);
+}
+
+input:focus {
+  outline: none
+}
+
+.firebaseui-button {
+  margin-top: 10px;
+  background-color: var(--ion-color-primary);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  font-size: 17px;
+  padding: 12px 15px 12px 15px
+}
+
+.firebaseui-button:active {
+  background-color: var(--ion-color-primary-shade)
+}
