--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -52,6 +52,7 @@ input:focus {
 
 .firebaseui-button {
   margin-top: 10px;
+  margin-right: 10px;
   background-color: var(--ion-color-primary);
   border: none;
   border-radius: 10px;
